add: cronograma ajustado

--- a/abntex2-modelo-ifrs-osorio-ads-tcc.tex
+++ b/abntex2-modelo-ifrs-osorio-ads-tcc.tex
@@ -97,12 +97,15 @@
 \usepackage[brazilian,hyperpageref]{backref}	 % Paginas com as citações na bibl
 \usepackage[alf]{abntex2cite}	% Citações padrão ABNT
 
-\usepackage{pgfgantt}
-\usepackage[landscape, a3paper, margin=1cm]{geometry}
-
 % --- 
 % CONFIGURAÇÕES DE PACOTES
 % --- 
+\usepackage[table]{xcolor}
+\usepackage{graphicx}
+\usepackage{multirow}
+\usepackage{diagbox}
+\usepackage{tikz}
+\usetikzlibrary{shapes,arrows}
 
 %Configurações do pacote listings
 %New colors defined below
