--- a/elementos-textuais/capitulo-3-cronograma.tex
+++ b/elementos-textuais/capitulo-3-cronograma.tex
@@ -1,15 +1,48 @@
 \chapter{Cronograma}\label{cronograma}
 
-O início do desenvolvimento foi definido para o início de Março de 2024, a partir de uma reunião externa com funcionários do Ceclimar, para definição do escopo geral do projeto.
+O cronograma ilustrado na Tabela ~\ref{tab:cronograma} representa a trajetória de desenvolvimento do projeto ao longo de 16 meses, bem como as divergências e replanejamentos que foram realizados no decorrer do tempo. O trabalho teve seu início no dia 28 de março de 2024, com a realização de uma reunião de definição de escopo junto do orientador Marcelo Paravisi. No dia 1º de abril, deu-se continuidade com a definição do tema, em uma reunião externa com um membro do CECLIMAR. Essa etapa foi fundamental para delimitar o foco do trabalho e aprofundar a compreensão das dificuldades, necessidades, oportunidades e pontos críticos do projeto
 
-A partir do dia 5 de Maio ficou definido o início do desenvolvimento do trabalho com a revisão bibliográfica (prazo máximo Julho), definição metodológica, o levantamento de requisitos (prazo máximo Agosto) e a organização da implementação (prazo máximo Junho). O levantamento de requisitos do sistema terá um prazo mais prolongado para que os alinhamentos de definições com a equipe do Ceclimar sejam mais abertos e constantes.
+Os meses seguintes, de maio a julho de 2024, foram dedicados à revisão bibliográfica e à definição metodológica. A definição metodológica se deu durante o mês de maio tendo início no dia 06, enquanto a parte de revisão bibliográfica se iniciou no dia 05 do mesmo mês e foi finalizada no final de julho. 
 
-O desenvolvimento do sistema terá seu início no dia 1º de Maio e sua projeção final programada para a última metade de Outubro. Aliado a isto, será iniciada a redação do trabalho a partir dos dados coletados na revisão bibliográfica, levantamento de requisitos e regras de negócio e definição metodológica. A parte escrita tem o prazo limite de finalização marcado para o final de novembro, mês em que também se iniciará a revisão do mesmo. A projeção é de que o projeto esteja pronto em dezembro para que a apresentação final seja agendada para o final do segundo semestre letivo.
+O levantamento de requisitos e regras de negócio se deu a partir do dia 10 de maio e se estendeu até o final de agosto para que os alinhamentos de definições com a equipe do CECLIMAR fossem mais abertos e constantes. É importante ressaltar que durante o desenvolvimento houve mudanças de funcionalidades e ajustes de regras de negócio durante o período de testes que fizeram com que fosse necessário revisitar esse tópico. 
 
-\begin{figure}[htb]
-  \centering
-  \includegraphics[width=0.8\textwidth]{imagens/cronograma1.png}
-  \caption{Cronograma geral de desenvolvimento do projeto.}
-  \legend{Fonte: Autor.}
-  \label{fig:cronograma}
-\end{figure}
+Esse período inicial de estruturação se mostrou essencial para assegurar uma base sólida para iniciar o desenvolvimento. A parte de desenvolvimento técnica se iniciou com a organização da implementação do sistema no dia 20 de maio de 2024 e, com base nisso, se iniciou a codificação do aplicativo no dia 1º de junho do mesmo ano. 
+
+Inicialmente, o desenvolvimento tinha um planejamento de conclusão para o final de outubro, porém, embora as atividades tenham progredido conforme o cronograma, em uma reunião com o orientador do projeto foi decido realizar uma alteração no cronograma adicionando uma etapa de testes disponibilizando a aplicação com testadores tanto do projeto parceiro, como terceiros que contribuíram para que a aplicação adquirisse uma maturidade maior. Com isso, o prazo final de codificação foi replanejado para o início de maio de 2025 (Tabela ~\ref{tab:cronograma}).
+
+A parte de redação da parte escrita do trabalho de conclusão foi iniciada paralelamente com a codificação para obter uma documentação mais precisa do processo e estava planejada para ser concluída até o final de novembro de 2024, porém, também foi afetada pelo replanejamento. Em vermelho na Tabela ~\ref{tab:cronograma} podemos ver que esta etapa foi realizada dentro do prazo previsto até o mes de outubro, porém em novembro foi adiada para maio e junho para priorizar a conclusão da codificação e o aprimoramento da qualidade da aplicação.
+O desenvolvimento continuou sendo a atividade central até maio de 2025, acompanhado de execuções constantes de testes. No mês de maio de 2025 a redação do trabalho retornou e se estendeu, junto da revisão textual, até o final de junho para ser entregue dentro da data máxima de 26 de junho. A apresentação para a banca até o momento havia sido definida, porém tem prazo máximo de 11 de julho de 2025.
+
+Esse cronograma evidencia o fluxo de trabalho realizado desde o início do planejamento do projeto, bem como as alterações ocorridas durante seu desenvolvimento. Para a elaboração desse material, foi fundamental que os períodos de escrita e codificação estivessem bem alinhados, permitindo traçar e documentar, com maior precisão, a linha do tempo apresentada, desde o início até a entrega final planejada.
+
+\begin{table}[ht]
+\centering
+\renewcommand{\arraystretch}{1.5}
+\setlength{\tabcolsep}{4pt} 
+\resizebox{\textwidth}{!}{
+\begin{tabular}{|>{\bfseries}l|*{11}{>{\centering\arraybackslash}p{1.6cm}|}}
+\hline
+\rowcolor{gray!20}
+Meses & \rotatebox{90}{Reunião def. de escopo} & \rotatebox{90}{Definição de tema} & \rotatebox{90}{Revisão bibliográfica} & \rotatebox{90}{Def. metodológica} & \rotatebox{90}{Levantamento de requisitos  } & \rotatebox{90}{Organização de implementação} & \rotatebox{90}{Desenvolvimento} & \rotatebox{90}{Redação de TCC} & \rotatebox{90}{Revisão textual} & \rotatebox{90}{Apresentação} & \rotatebox{90}{Testes} \\ \hline
+Mar/24 & \cellcolor{gray!30} & & & & & & & & & & \\ \hline
+Abr/24 & & \cellcolor{gray!30} & & & & & & & & & \\ \hline
+Mai/24 & & & \cellcolor{gray!30} & \cellcolor{gray!30} & \cellcolor{gray!30} & \cellcolor{gray!30} & & & & & \\ \hline
+Jun/24 & & & \cellcolor{gray!30} & & \cellcolor{gray!30} & \cellcolor{gray!30} & \cellcolor{gray!30} & \cellcolor{gray!30} & & & \\ \hline
+Jul/24 & & & \cellcolor{gray!30} & & \cellcolor{gray!30} & & \cellcolor{gray!30} & \cellcolor{gray!30} & & & \\ \hline
+Ago/24 & & & & & \cellcolor{gray!30} & & \cellcolor{gray!30} & \cellcolor{gray!30} & & & \\ \hline
+Set/24 & & & & & & & \cellcolor{gray!30} & \cellcolor{gray!30} & & & \\ \hline
+Out/24 & & & & & & & \cellcolor{gray!30} & \cellcolor{gray!30} & & & \\ \hline
+Nov/24 & & & & & & & \cellcolor{blue!30} & \cellcolor{red!30} & \cellcolor{red!30} & & \\ \hline
+Dez/24 & & & & & & & \cellcolor{blue!30} & & & \cellcolor{red!30} & \cellcolor{blue!30} \\ \hline
+Jan/25 & & & & & & & \cellcolor{blue!30} & & & & \cellcolor{blue!30} \\ \hline
+Fev/25 & & & & & & & \cellcolor{blue!30} & & & & \cellcolor{blue!30} \\ \hline
+Mar/25 & & & & & & & \cellcolor{blue!30} & & & & \cellcolor{blue!30} \\ \hline
+Abr/25 & & & & & & & \cellcolor{blue!30} & & & & \cellcolor{blue!30} \\ \hline
+Mai/25 & & & & & & & \cellcolor{blue!30} & \cellcolor{blue!30} & & & \cellcolor{blue!30} \\ \hline
+Jun/25 & & & & & & & & \cellcolor{blue!30} & \cellcolor{blue!30} & \cellcolor{blue!30} & \cellcolor{blue!30} \\ \hline
+\end{tabular}%
+}
+\caption{Cronograma de desenvolvimento — Cinza: Planejamento inicial, Azul: Replanejamento, Vermelho: Prazos adiados.}
+\label{tab:cronograma}
+\legend{Fonte: Autor}
+\end{table}
