ajustes nos trabalhos correlatos + seção final

--- a/elementos-pos-textuais/referencias.bib
+++ b/elementos-pos-textuais/referencias.bib
@@ -481,7 +481,7 @@
   author = {{Microsoft}},
   year = {2024},
   url = {https://www.microsoft.com/excel},
-  note = {Acesso em: 10 abr. 2024}
+  note = {Acesso em: 15 abr. 2024}
 }
 
 @online{playstore2024,
@@ -497,7 +497,7 @@
   author = {{Governo Federal do Brasil}},
   year = {2024},
   url = {https://www.gov.br},
-  note = {Acesso em: 10 abr. 2024}
+  note = {Acesso em: 18 abr. 2024}
 }
 
 @online{android2024,
@@ -505,11 +505,19 @@
   author = {{Google}},
   year = {2024},
   url = {https://www.android.com},
-  note = {Acesso em: 10 abr. 2024}
+  note = {Acesso em: 15 abr. 2024}
 }
 
 @book{gil2002elaborar,
   title={Como elaborar projetos de pesquisa},
   author={Gil, Ant{\^o}nio Carlos and others},
   volume={4}
+}
+
+@online{petrobras_simba_2024,
+  title     = {SIMBA - Sistema de Monitoramento da Biodiversidade Aquática},
+  author    = {{Petrobras}},
+  year      = {2024},
+  url       = {https://simba.petrobras.com.br/simba/web/},
+  note      = {Acesso em: 12/04/2024},
 }
