template de resultados + tecnologias e frameworks

--- a/abntex2-modelo-ifrs-osorio-ads-tcc.tex
+++ b/abntex2-modelo-ifrs-osorio-ads-tcc.tex
@@ -86,7 +86,7 @@
 %pacote para inserir blocos de código
 \usepackage{listings}
 \usepackage{color}
-
+\usepackage{float}
 \usepackage{textcomp}
 
 \usepackage[font=small]{caption}
@@ -358,6 +358,17 @@
 % Capitulo 5
 % ---
 \include{elementos-textuais/capitulo-5-trabalhos-correlatos}
+% ---
+
+% Capitulo 6
+% ---
+\include{elementos-textuais/capitulo-6-tecnologias}
+% ---
+
+
+% Capitulo 7
+% ---
+\include{elementos-textuais/capitulo-7-resultados}
 % ---
 
 % ---
