--- a/elementos-pos-textuais/referencias.bib
+++ b/elementos-pos-textuais/referencias.bib
@@ -521,3 +521,59 @@
   url       = {https://simba.petrobras.com.br/simba/web/},
   note      = {Acesso em: 12/04/2024},
 }
+
+@online{hive2025,
+  title = {Hive - Lightweight and blazing fast key-value database written in pure Dart},
+  author = {Simon Leier and contributors},
+  howpublished = {\url{https://pub.dev/documentation/hive/latest/}},
+  note = {Acessado em: maio 2025},
+  year = {2025}
+}
+
+@online{flutterDocs2025,
+  title     = {Flutter Documentation},
+  author    = {{Flutter}},
+  year      = {2025},
+  url       = {https://docs.flutter.dev/},
+  note      = {Accessed: 2025-05-08}
+}
+
+@online{dartDocs2025,
+  title     = {Dart Documentation},
+  author    = {{Dart}},
+  year      = {2025},
+  url       = {https://dart.dev/docs},
+  note      = {Accessed: 2025-05-08}
+}
+
+@online{firebase2025,
+  title     = {Firebase Documentation},
+  author    = {{Google Firebase}},
+  year      = {2025},
+  url       = {https://firebase.google.com/docs?authuser=0&hl=pt-br},
+  note      = {Acesso em: 10 maio 2025}
+}
+
+@misc{flutter_map_doc,
+  title        = {flutter\_map: Interactive maps for Flutter based on Leaflet},
+  author       = {flutter\_map},
+  year         = {2025},
+  howpublished = {\url{https://pub.dev/packages/flutter_map}},
+  note         = {BSD 3-Clause License. Accessed: 10 May 2025}
+}
+
+@online{excel_flutter,
+  title        = {excel: A Flutter and Dart library for reading and writing Excel files},
+  author       = {Kawaljeet Singh},
+  year         = {2021},
+  howpublished = {\url{https://pub.dev/packages/excel}},
+  note         = {MIT License. Accessed: 10 May 2025}
+}
+
+@online{graphic_flutter,
+  title        = {graphic: A Flutter data visualization library},
+  author       = {LIN Chen},
+  year         = {2024},
+  howpublished = {\url{https://pub.dev/packages/graphic}},
+  note         = {MIT License. Accessed: 10 May 2025}
+}
