--- a/elementos-textuais/capitulo-7-resultados.tex
+++ b/elementos-textuais/capitulo-7-resultados.tex
@@ -92,15 +92,15 @@ O sistema utiliza o Firebase Authentication como provedor principal para autenti
 
 (Apresenta telas, wireframes e decisões visuais adotadas.)
 
-\section{Projeto Gerencial do Protótipo}
+\section{Projeto Gerencial}
 
 (Detalhamento sobre cronogramas, milestones e gestão de atividades do Projeto I.)
 
-\section{Implementação do Protótipo}
+\section{Implementação}
 
 (Apresentação da implementação já realizada, destacando módulos ou telas entregues.)
 
-\section{Projeto e Execução de Testes e Verificação de Qualidade do Protótipo}
+\section{Execução de Testes e Verificação de Qualidade}
 
 (Descrever testes aplicados, resultados parciais e estratégias futuras.)
 
