add estado atual

--- a/elementos-pos-textuais/referencias.bib
+++ b/elementos-pos-textuais/referencias.bib
@@ -577,3 +577,19 @@
   howpublished = {\url{https://pub.dev/packages/graphic}},
   note         = {MIT License. Accessed: 10 May 2025}
 }
+
+@misc{instagram2025,
+  author       = {{Instagram}},
+  title        = {Instagram},
+  year         = {2025},
+  howpublished = {\url{https://www.instagram.com/}},
+  note         = {Acesso em: 10 maio 2025}
+}
+
+@misc{facebook2025,
+  author       = {{Facebook}},
+  title        = {Facebook},
+  year         = {2025},
+  howpublished = {\url{https://www.facebook.com/}},
+  note         = {Acesso em: 10 maio 2025}
+}
