--- a/elementos-textuais/capitulo-8-resultados.tex
+++ b/elementos-textuais/capitulo-8-resultados.tex
@@ -1,5 +1,6 @@
 \chapter{Resultados Obtidos}
-Este capítulo demonstra os artefatos produzidos para o \textit{software}, incluindo todas as informações associadas desde a análise até os testes, de acordo com o escopo da disciplina Projeto I.
+Este capítulo demonstra os artefatos produzidos para o \textit{software}, incluindo 
+as informações associadas desde a análise até os testes.
 
 \section{Engenharia de Requisitos}
 
