--- a/abntex2-modelo-ifrs-osorio-ads-tcc.tex
+++ b/abntex2-modelo-ifrs-osorio-ads-tcc.tex
@@ -105,7 +105,7 @@
 \usepackage{multirow}
 \usepackage{diagbox}
 \usepackage{tikz}
-\usetikzlibrary{shapes,arrows}
+\usetikzlibrary{shapes.geometric, arrows, positioning}
 
 %Configurações do pacote listings
 %New colors defined below
@@ -365,10 +365,14 @@
 \include{elementos-textuais/capitulo-6-tecnologias}
 % ---
 
-
 % Capitulo 7
 % ---
-\include{elementos-textuais/capitulo-7-resultados}
+\include{elementos-textuais/capitulo-7-estado-atual}
+% ---
+
+% Capitulo 8
+% ---
+\include{elementos-textuais/capitulo-8-resultados}
 % ---
 
 % ---
@@ -376,7 +380,6 @@
 % ---
 \include{elementos-textuais/conclusao}
 % ---
-
 
 % ----------------------------------------------------------
 % ELEMENTOS PÓS-TEXTUAIS
